test/typechecker.d/invalid/decls.souc.bad
f(x: Integer): Integer = do
	i: Integer <- 5
    return i

m = i
